[gd_scene load_steps=5 format=3 uid="uid://c45pxv8wdpi87"]

[ext_resource type="Script" path="res://components/ui/save_slot.gd" id="1_4bqc5"]
[ext_resource type="Texture2D" uid="uid://bgb7slgjomphg" path="res://textures/ui/components/icon_cross.png" id="2_lpusb"]
[ext_resource type="Texture2D" uid="uid://cvhcbumk31aes" path="res://textures/characters/character_preview.png" id="3_ubvjc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8vshe"]
atlas = ExtResource("3_ubvjc")
region = Rect2(0, 0, 16, 16)

[node name="SaveSlot" type="PanelContainer"]
script = ExtResource("1_4bqc5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
alignment = 2

[node name="DeleteButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
texture_normal = ExtResource("2_lpusb")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 12

[node name="CharacterImage" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = SubResource("AtlasTexture_8vshe")
stretch_mode = 5

[node name="LastPlayed" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "EMPTY"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_select"]
